grammar.txt
PROGRAM -> INCLUDE_LIB MAIN_FN
INCLUDE_LIB -> INCLUDE_CMD INCLUDE_CMD
INCLUDE_CMD -> HST INCLUDE MAIOR VAR MENOR 
LIB -> ASP VAR ASP 

MAIN_FN -> INT MAIN AP FP AC MAIN_BODY FC 

RETURN_CMD -> RETURN NUMBER
MAIN_BODY -> (COMMAND_BLOCK)* RETURN_CMD PTV

COMMAND_BLOCK ->  SWITCH_CMD | ( DECLARATION | ATTRIBUTION | PRINT_CMD) PTV

STRING -> ASP VAR* ASP 
PRINT_CMD -> PRINT AP STRING FP

SWITCH_CMD -> SWITCH AP VAR FP AC CASE_BLOCK+ FC
CASE_BLOCK -> CASE VAR DPT PRINT_CMD BREAK PTV


DECLARATION -> ( CHAR | INT ) VAR 
ATTRIBUTION -> VAR ATTRIB VAR
